# open-grace

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  ROADMAP.md  demo_react_app.py  docker-compose.yml  frontend.diff  pyproject.toml  start.sh  test_gemini.py  verify_episodic_memory.py  verify_guardrails.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/agents/: __init__.py  agent_swarm.py  base_agent.py  coder_agent.py  evaluator_agent.py  planner_agent.py  research_agent.py  sysadmin_agent.py
backend/api/: __init__.py  deps.py  mobile.py  models.py  routes_agents.py  routes_auth.py  routes_logs.py  routes_mobile.py  routes_system.py  routes_tasks.py  server.py
backend/cli/: __init__.py  knowledge.py  main.py
backend/core/: __init__.py  agent_swarm.py  orchestrator.py  scheduler.py  task_queue.py
backend/memory/: __init__.py  document_processor.py  knowledge_store.py  long_term_memory.py  rag_engine.py  short_term_memory.py  vector_index.py  vector_store.py
backend/models/: __init__.py  model_pool.py  router.py
backend/observability/: __init__.py  logger.py
backend/plugins/: __init__.py  loader.py  manager.py  sdk.py
backend/resources/: guard.py  metrics_collector.py  resource_manager.py  watchdog.py
backend/runtime/: model_pool.py
backend/sandbox/: __init__.py  bwrap_runner.py  docker_sandbox.py  executor.py
backend/security/: __init__.py  auth.py  sandbox.py
dashboard/: Dockerfile  package-lock.json  package.json
docker/: Dockerfile.backend  Dockerfile.dashboard  docker-compose.yml
docs/: CHANGELOG.md  SECURITY.md
frontend/: .env  index.html  package-lock.json  package.json
frontend/public/: sw.js  (+1 more)
open_grace/: __init__.py
open_grace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: start_dev.sh
tests/: __init__.py  conftest.py  simulate_full_architecture.py  test_agents.py  test_auth.py  test_autonomous_loop.py  test_autonomous_pipeline.py  test_evaluation_loop.py  test_evaluation_mocked.py  test_gemini.py  test_model_router.py  test_orchestrator.py  test_plugins.py  test_simple_integration.py  test_vault.py  verify_ai_os.py  verify_graph_of_thoughts.py  verify_resource_management.py
(+115 files in other folders)
